--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://automate.io/assets/img/favicon.png">
+  <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
